# plugin_for_Shining_Lore_Online

./: .gitignore  Shining Online.CT  UpgradeLog.htm  WindowsFormsApplication1.sln  guagua.sln
GuaGua2/: CSelectUserDlg.cpp  CSelectUserDlg.h  Config.h  GamUser.cpp  GamUser.h  GuaGua2.aps  GuaGua2.cpp  GuaGua2.h  GuaGua2.rc  GuaGua2.vcxproj  GuaGua2.vcxproj.filters  GuaGua2Dlg.cpp  GuaGua2Dlg.h  ObjecInfo_HP_SP_NP.cpp  ObjecInfo_HP_SP_NP.h  ProcessFind.h  SplitDlg.cpp  SplitDlg.h  actions.cpp  actions.h  dll_injection.cpp  dll_injector.h  example.json  mouseHook.h  resource.h
GuaGua2/res/: GuaGua2.rc2
OP_findPIC/: CMakeLists.txt  CMakePresets.json
OP_findPIC/src/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  op.cpp  op.h
OP_findPIC/src/imageProc/: ImageLoc.cpp  ImageLoc.h  ImageProc.cpp  ImageProc.h
OP_findPIC/src/include/: Dict.h
Project_DLL/: CQMPlugin.cpp  Project_DLL.vcxproj  Project_DLL.vcxproj.filters  QMPlugin.rc  QMPlugin_h.h  QMPlugin_i.c  Resource.h  StdAfx.h
QMPlugin/: CQMPlugin.h  CommonLib.lib  CommonLibD.lib  File.dsp  File.vcxproj  File.vcxproj.filters  QMPlugin.clw  QMPlugin.def  QMPlugin.odl  QMPlugin.rc  QMPlugin_h.h  QMPlugin_i.c  StdAfx.cpp  StdAfx.h
WindowsFormsApplication1/: CustomSection.cs  EnumReportApp.cs  EnumWindowProc.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  GolbalSetting.cs  Guagua.csproj  MouseEvent.cs  MyFindWindow.cs  NativeMethods.cs  ObjecInfo_HP_SP_NP.cs  ObjectInfo.cs  ObjectInfoWorker.cs  ProcessMemoryReader.cs  ProcessMemoryReaderApi.cs  Program.cs  ReadData_from_Mem.cs  UserControl1.Designer.cs  UserControl1.cs  WindowsFormsApplication1.csproj  findObjectCB.cs
WindowsFormsApplication1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
WindowsFormsApplication2/: Form1.Designer.cs  Form1.cs  WindowsFormsApplication2.csproj
WindowsFormsApplication2/Properties/: AssemblyInfo.cs
detours_cmake_tpl/: CMakeSettings.json
(+3 files in other folders)
